# OCamlWebsite

./: .gitignore  README.md  bsconfig.json  common.ml  database.ml  default_database.sql  dune  esy.json  package.json  websocket.ml
client/: client.ml
server/: common.ml  connection.ml  database.ml  dune  rendering.eml.html  server.ml  websocket.ml
static/: client.js
