(executable
 (name server)
 (modules server connection websocket rendering database common)
 (libraries dream caqti-driver-sqlite3 ppx_rapper_lwt)
 (preprocess (pps lwt_ppx ppx_rapper)))

(rule
 (targets rendering.ml)
 (deps rendering.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
